--- a/index.html
+++ b/index.html
@@ -36,16 +36,23 @@
       <p> XXXX collection yada yada yada yada yada yaddaaa yaa yada ydad</p>
 
       <div class="passFlex">
-        <div class="passFlex-imgCon">
-          <img id="logo2" src="/build/images/pass.gif" alt="Logo" />
-        </div>
 
         <div class="passFlex-imgCon">
-          <img id="logo2" src="/build/images/daimondPass.gif" alt="Logo" />
+          <img id="logo2" src="/build/images/diamond.gif" alt="Logo" />
+          <p> DIAMOND PASS</p>
+
         </div>
+        <div class="passFlex-imgCon">
+          <img id="logo2" src="/build/images/gold.gif" alt="Logo" />
+          <p> GOLD PASS</p>
+        </div>
+
+      
 
         <div class="passFlex-imgCon">
           <img id="logo2" src="/build/images/silver.gif" alt="Logo" />
+          <p> SILVER PASS </p>
+
         </div>
 
       </div>
@@ -59,7 +66,7 @@
       <div class="minting-container">
 
         <div class="minting-container__title ">
-          <h1> Collect Your <span class="metaTitle"> METAVERSE</span> Pass</h1>
+          <h1> Collect Your <span class="metaTitle"> NITRO-VERSE</span> Pass</h1>
         </div>
 
 
@@ -72,7 +79,7 @@
 
     <div class="container carousel">
 
-      <h2 class="header_txt ">SNEAK PEAK </h2>
+      <h2 class="header_txt ">SNEAK PEEK </h2>
 
       <div class="CSSgal">
 
@@ -114,12 +121,26 @@
       </div>
     </div>
 
+
+
+<div class="container team">
+
+  <div>
+    
+  </div>
+  <div></div>
+  <div></div>
+
+
+</div>
     <div class="container footer">
 
-      <h2> Copyright Ⓒ 2022 NITROVERSE metaverse </h2>
+      <h2> Copyright Ⓒ 2022 NITRO-VERSE GENESIS  </h2>
 
 
     </div>
+
+
 
   </main>
 </body>
