--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>NITROVERSE METAVERSE</title>
+  <title>Mooncraft NFT</title>
   <link rel="icon" type="image/png" href="/build/images/fav.png" />
 
   <link rel="stylesheet" href="/build/main.css">
@@ -19,7 +19,8 @@
 
     <div class="container ">
       <div class="nav">
-        <h1 class="title"> NITROVERSE GENESIS </h1>
+        <!-- <h1 class="title"> MOONCRAFT (LOGO) </h1> -->
+        <img  class="logo" src="../build/images/MoonCraftlogo.svg" >
         <div>
           <a href="https://twitter.com/NITROVERSENFT" target="_new"> <img id="logo" src="/build/images/twitter-xxl.png" alt="Logo" /> </a>
           <a href="#"> <img id="logo" src="/build/images/discord.png" alt="Logo" /> </a>
@@ -30,8 +31,8 @@
     </div>
 
     <div class="intro">
-      <h2> Introducing The: </h2>
-      <h1 class="animate-charcter">  <br> THE NITRO-VERSE METAVERSE PASS</h1>
+      <h2> Introducing the: </h2>
+      <h1 class="animate-charcter">  <br> THE MOONCRAFT NFT PASS</h1>
 
       <p> XXXX collection yada yada yada yada yada yaddaaa yaa yada ydad</p>
 
@@ -66,7 +67,7 @@
       <div class="minting-container">
 
         <div class="minting-container__title ">
-          <h1> Collect Your <span class="metaTitle"> NITRO-VERSE</span> Pass</h1>
+          <h1> Collect Your <span class="metaTitle"> MOONCRAFT </span> Pass</h1>
         </div>
 
 
@@ -91,7 +92,7 @@
 
         <div class="slider">
           <div>
-            <img src="/build/images/world1.jpg" alt="">
+            <img src="/build/images/moonshop.png" alt="">
           </div>
           <div>
             <img src="/build/images/world2.jpg" alt="">
@@ -135,7 +136,7 @@
 </div>
     <div class="container footer">
 
-      <h2> Copyright Ⓒ 2022 NITRO-VERSE GENESIS  </h2>
+      <h2> COPYRIGHT Ⓒ 2022 MOONCRAFT NFT  </h2>
 
 
     </div>
