--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container ">
       <div class="nav">
         <!-- <h1 class="title"> MOONCRAFT (LOGO) </h1> -->
-        <img  class="logo" src="../build/images/MoonCraftlogo.svg" >
+        <img  class="logo" src="../build/images/mooncraftLogoFinal.gif" >
         <div>
           <a href="https://twitter.com/NITROVERSENFT" target="_new"> <img id="logo" src="/build/images/twitter-xxl.png" alt="Logo" /> </a>
           <a href="#"> <img id="logo" src="/build/images/discord.png" alt="Logo" /> </a>
