--- a/index.html
+++ b/index.html
@@ -18,66 +18,71 @@
   <main>
 
 
-    <div class="container ">
-      <div class="nav">
-        <!-- <h1 class="title"> MOONCRAFT (LOGO) </h1> -->
-        <img class="logo" src="../build/images/mooncraftLogoFinal.gif">
+    <div class="nav">
+      <img class="logo" src="../build/images/mooncraftLogoFinal.gif">
+      <div>
+        <a class="Opensea" href="https://twitter.com/MoonCraftNFT" target="_new"> Twitter </a>
+
         <div>
-          <a href="https://twitter.com/NITROVERSENFT" target="_new"> <img id="logo" src="/build/images/twitter-xxl.png"
-              alt="Logo" /> </a>
-          <a href="#"> <img id="logo" src="/build/images/discord.png" alt="Logo" /> </a>
+          <a class="Opensea" href="#"> Buy on Opensea </a>
+          <div class="popup" onclick="myFunction()"> Claim
+            <span class="popuptext" id="myPopup">Claim Feature Coming Soon! </span>
+          </div>
 
-          <div>
+        </div>
 
-            <div class="popup" onclick="myFunction()"> Claim 
-              <span class="popuptext" id="myPopup">Claim Feature Coming Soon! </span>
-            </div>
+
+      </div>
+    </div>
+
+
+    <div class="container ">
+
+
+      <div class="intro">
+        <h2> Introducing the: </h2>
+        <h1 class="animate-charcter"> <br> THE MOONCRAFT NFT PASS</h1>
+
+        <div class="trans-div">
+          <p> Mooncraft is a metaverse based on Minecraft. We intend to expand our use of Minecraft by connecting it to
+            the
+            blockchain and enabling real-time asset exchange.
+          </p>
+
+          <p> Diamond, Gold, and Silver Mooncraft passes are among the 10,000 available. Each has its own set of
+            advantages.
+          </p>
+
+        </div>
+
+
+
+
+        <div class="passFlex">
+
+          <div class="passFlex-imgCon">
+            <img id="logo2" src="/build/images/diamondPass.gif" alt="Logo" />
+            <p> DIAMOND PASS</p>
 
           </div>
-          <a class="Opensea" href="#"> Buy on Opensea </a>
+          <div class="passFlex-imgCon">
+            <img id="logo2" src="/build/images/goldPass.gif" alt="Logo" />
+            <p> GOLD PASS</p>
+          </div>
+
+
+
+          <div class="passFlex-imgCon">
+            <img id="logo2" src="/build/images/silverPass.gif" alt="Logo" />
+            <p> SILVER PASS </p>
+
+          </div>
 
         </div>
+
+
       </div>
     </div>
-
-    <div class="intro">
-      <h2> Introducing the: </h2>
-      <h1 class="animate-charcter"> <br> THE MOONCRAFT NFT PASS</h1>
-
-      <p> Mooncraft is a metaverse based on Minecraft. We intend to expand our use of Minecraft by connecting it to the
-        blockchain and enabling real-time asset exchange.
-      </p>
-
-      <p> Diamond, Gold, and Silver Mooncraft passes are among the 10,000 available. Each has its own set of advantages.
-      </p>
-
-
-
-      <div class="passFlex">
-
-        <div class="passFlex-imgCon">
-          <img id="logo2" src="/build/images/diamondPass.gif" alt="Logo" />
-          <p> DIAMOND PASS</p>
-
-        </div>
-        <div class="passFlex-imgCon">
-          <img id="logo2" src="/build/images/goldPass.gif" alt="Logo" />
-          <p> GOLD PASS</p>
-        </div>
-
-
-
-        <div class="passFlex-imgCon">
-          <img id="logo2" src="/build/images/silverPass.gif" alt="Logo" />
-          <p> SILVER PASS </p>
-
-        </div>
-
-      </div>
-
-
-    </div>
-
 
     <div class="container">
 
@@ -90,8 +95,11 @@
 
         <!-- <div id="minting-dapp"></div> -->
 
-        <div>
-          <h1> Mint ONLY thru <a href=""> Contract </a> </h1>
+        <div class="etherscan">
+          <p> Mint via Etherscan  <a  class ="animate-charcter " href=""> Contract </a> </p>
+
+          <p > Trouble minting? Read <a href="https://blog.logrocket.com/how-to-mint-an-nft-with-etherscan/"> this doc</a> for more information on how to mint</p>
+
         </div>
 
 
@@ -101,7 +109,7 @@
 
     <div class="container carousel">
 
-      <h2 class="header_txt ">SNEAK PEEK </h2>
+      <h2 class="header_txt "> MOON GALLERY </h2>
 
 
       <!-- Slider main container -->
@@ -109,10 +117,12 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
+          <div class="swiper-slide"><img src="/build/images/moonbg.png" alt=""></div>
           <div class="swiper-slide"> <img src="/build/images/moonshop.png" alt="">
           </div>
-          <div class="swiper-slide"><img src="/build/images/moonshop.png" alt=""> </div>
-          <div class="swiper-slide"><img src="/build/images/moonshop.png" alt=""></div>
+          <div class="swiper-slide"><img src="/build/images/MooncraftShop.png" alt=""> </div>
+          <div class="swiper-slide"><img src="/build/images/Mooncraft_Login_png.png" alt=""></div>
+
           ...
         </div>
         <!-- If we need pagination -->
@@ -130,6 +140,33 @@
     </div>
 
 
+    <h1 class="header_txt"> Meet the team </h1>
+
+    <div class="container container__team">
+
+
+      <div class="teamMember">
+        <img src="/build/images/Crafter1.png" alt="">
+        <h2> Jungyun - Project Lead </h2>
+        <a href="#"> Twitter </a>
+      </div>
+
+      <div class="teamMember">
+        <img src="/build/images/Crafter2.png" alt="">
+        <h2> Chan-Ming - Developer </h2>
+        <a href="#">  Twitter </a>
+
+
+      </div>
+
+      <div class="teamMember">
+        <img src="/build/images/Crafter3.png" alt="">
+        <h2> Jackie - Designer </h2>
+        <a href="#"> Twitter </a>
+
+
+      </div>
+    </div>
 
     <div class="container footer">
 
