--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
       <div class="intro">
-        <h2> Introducing the: </h2>
+        <h2> Introducing... </h2>
         <h1 class="animate-charcter"> <br> THE MOONCRAFT NFT PASS</h1>
 
         <div class="trans-div">
@@ -96,9 +96,11 @@
         <!-- <div id="minting-dapp"></div> -->
 
         <div class="etherscan">
-          <p> Mint via Etherscan  <a  class ="animate-charcter " href=""> Contract </a> </p>
+          <p> Mint via Etherscan -> <a target="_new" class="mintBtn" href="https://etherscan.io/"> Contract </a> </p>
 
-          <p > Trouble minting? Read <a href="https://blog.logrocket.com/how-to-mint-an-nft-with-etherscan/"> this doc</a> for more information on how to mint</p>
+          <p> Trouble minting? Read <a  target="_new"
+              href="https://blog.logrocket.com/how-to-mint-an-nft-with-etherscan/"> this doc</a> for more information on
+            how to mint</p>
 
         </div>
 
@@ -118,10 +120,11 @@
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide"><img src="/build/images/moonbg.png" alt=""></div>
-          <div class="swiper-slide"> <img src="/build/images/moonshop.png" alt="">
+          <div class="swiper-slide"> <img src="/build/images/MoonshopMenu_FinalVersion.png" alt="">
           </div>
-          <div class="swiper-slide"><img src="/build/images/MooncraftShop.png" alt=""> </div>
           <div class="swiper-slide"><img src="/build/images/Mooncraft_Login_png.png" alt=""></div>
+          <div class="swiper-slide"><img src="/build/images/mooncraftPortals.png" alt=""></div>
+
 
           ...
         </div>
@@ -154,7 +157,7 @@
       <div class="teamMember">
         <img src="/build/images/Crafter2.png" alt="">
         <h2> Chan-Ming - Developer </h2>
-        <a href="#">  Twitter </a>
+        <a href="#"> Twitter </a>
 
 
       </div>
