--- a/index.html
+++ b/index.html
@@ -96,7 +96,20 @@
         <!-- <div id="minting-dapp"></div> -->
 
         <div class="etherscan">
+          
+          <h3> Mint Info</h3>
+          <ul>
+            <li>  Total supply: <strong>10k </strong></li>
+            <li>  Mint price: <Strong>0.00125eth </Strong>  </li>
+            <li>  Free Mint Amount: <strong> ?? </strong></li>
+            <li>  Max Free Per Wallet : <strong> 3</strong></li>
+          </ul>
+
+
+
           <p> Mint via Etherscan -> <a target="_new" class="mintBtn" href="https://etherscan.io/"> Contract </a> </p>
+
+          
 
           <p> Trouble minting? Read <a  target="_new"
               href="https://blog.logrocket.com/how-to-mint-an-nft-with-etherscan/"> this doc</a> for more information on
@@ -151,24 +164,34 @@
       <div class="teamMember">
         <img src="/build/images/Crafter1.png" alt="">
         <h2> Jungyun - Project Lead </h2>
-        <a href="#"> Twitter </a>
       </div>
 
       <div class="teamMember">
         <img src="/build/images/Crafter2.png" alt="">
         <h2> Chan-Ming - Developer </h2>
-        <a href="#"> Twitter </a>
-
 
       </div>
 
       <div class="teamMember">
         <img src="/build/images/Crafter3.png" alt="">
         <h2> Jackie - Designer </h2>
-        <a href="#"> Twitter </a>
 
 
       </div>
+    </div>
+
+
+    <div class="container" style="margin-top:1rem">
+
+      <h2 class="header_txt"> Follow  <a  target="_new" href="https://twitter.com/MoonCraftNFT"> @MoonCraftNFT</a> on Twitter to stay up to date with the latest news </h2>
+    </div>
+
+
+
+
+    <div class="container">
+      <embed src="https://fantastic-florentine-abad5c.netlify.app/" style="width:700px; height: 600px;">
+
     </div>
 
     <div class="container footer">
